CHANGES:

	d3v11 - Sat Oct 22 2011:

		SpliceX is the new replacement for Splice3.
		it includes some new options and should be
		compatible with most versions of Python.

		see README, splicex --help, splicex --rtfm

	d3v11 - Sun Oct 23 2011:

		Added some colour enhancements to SpliceX
		:-). This is a useless update but i thought
		it was fun.

		Also, I trimmed down much unnecessary
		code.

		'deshadow' bug fixed in splicex.py src

	d3v11 - Fri Oct 28 2011:

		SpliceX now compiles to machine language
		via Cython. see README for dependencies
		and installation details.
		
		SpliceX compiler flags patched. recent
		update did not distinguish:

			/usr/include/<python version>

				-FROM-

			/usr/local/include/<python version>

		Thus, if you have debian python-dev or 
		source python-dev the ./configure script
		should choose the appropriate option.
		if the configure still failed to locate
		the python development files (headers)
		please let me know and I will correct.

		SpliceX can now optionally do a pure
		python install. This cuts down on
		dependencies and is useful if you just
		want to test, try, and/or debug.

		SpliceX now detects invalid arguments
		and prints with error message.